<resources>
    <string name="app_name">Entrega_1</string>
    <string name="tarefa_selecionada">"Tarefa selecionada: "</string>
    <string name="lista_tarefas_title">Lista de Tarefas</string>

    <string name="Comprar_leite">"Comprar leite"</string>
    <string name="Fazer_exercicios">"Fazer exercícios"</string>
    <string name="Estudar_OOP">"Estudar OOP"</string>
    <string name="Estudar_Programacao_android">"Estudar Programação android"</string>
    <string name="Fazer_Prova_Oracle">"Fazer Prova Oracle"</string>
    <string name="Sair_com_os_amigos">"Sair com os amigos"</string>
    <string name="Levar_carro_para_revisao">"Levar carro para revisão"</string>
    <string name="Consertar_a_janela">"Consertar a janela"</string>
    <string name="Dar_banho_no_dog">"Dar banho no dog"</string>
    <string name="Cumprir_a_corrida_matinal_da_sexta">"Cumprir a corrida matinal da sexta"</string>
    <string name="Visitar_os_pais">"Visitar os pais"</string>
    <string name="Tomar_botonico_fontoura">"Tomar botonico fontoura"</string>
    <string name="Comprar_leite_descricao">"Comprar leite no supermercado"</string>
    <string name="Fazer_exercicios_descricao">"Fazer 30 minutos de exercícios aeróbicos"</string>
    <string name="Estudar_OOP_descricao">"Estudar Orientação a Objetos para a prova"</string>
    <string name="Estudar_Programacao_android_descricao">"Desenvolver um aplicativo Android básico"</string>
    <string name="Fazer_Prova_Oracle_descricao">"Estudar para a certificação Oracle"</string>
    <string name="Sair_com_os_amigos_descricao">"Encontrar os amigos no restaurante"</string>
    <string name="Levar_carro_para_revisao_descricao">"Levar o carro na oficina para trocar o óleo"</string>
    <string name="Consertar_a_janela_descricao">"Consertar a janela da sala que está emperrada"</string>
    <string name="Dar_banho_no_dog_descricao">"Dar banho no cachorro no final da tarde"</string>
    <string name="Cumprir_a_corrida_matinal_da_sexta_descricao">"Correr 5 km no parque pela manhã"</string>
    <string name="Visitar_os_pais_descricao">"Passar o final de semana com os pais"</string>
    <string name="Tomar_botonico_fontoura_descricao">"Tomar remédio para gripe"</string>
    <string name="Alta">"Alta"</string>
    <string name="Media">"Média"</string>
    <string name="Baixa">"Baixa"</string>
    <string name="digite_o_t_tulo_da_tarefa">Digite o título da tarefa</string>
    <string name="digite_a_descri_o_da_tarefa_opcional">Digite a descrição da tarefa (Opcional)</string>
    <string name="alta_prioridade">Alta Prioridade</string>
    <string name="m_dia_prioridade">Média Prioridade</string>
    <string name="baixa_prioridade">Baixa Prioridade</string>
    <string name="tarefa_concluida">Tarefa Concluída</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="t_tulo">Título:</string>
    <string name="descri_o">Descrição:</string>
    <string name="adicionar">Adicionar</string>
    <string name="sobre">Sobre</string>
    <string name="Pos_java">Pós-Graduando em Programação em Java</string>
    <string name="alexandre_alunos_utfpr_edu_br">alexandretrieste@alunos.utfpr.edu.br</string>
    <string name="Descricao_do_app">Aplicativo de gestão de tempo: aqui você pode cadastrar suas tarefas diversas e marcá-las como concluídas quando efetivamente o fizer.</string>
    <string name="logo_utfpr">Logo UTFPR</string>
    <string name="utfpr">Universidade Tecnológia Federal do Paraná - UTFPR</string>
    <string name="autor">Alexandre Trieste</string>
    <string name="cadastrar_tarefa">Cadastrar Tarefa</string>
</resources>